# azure-functions-ai-services-agent-python

./: README.md  pyproject.toml  voice-live-demo.py  voice-live-quickstart.py
agents/: WeatherAgent.json
app/: function_app.py  requirements.txt
infra/: main.bicep  main.bicepparam
infra/agent/: ai-foundry-project.bicep  old_standard-ai-hub.bicep  standard-dependent-resources.bicep
scripts/: create_or_update_agent.py  create_or_update_all_agents.py  project_create_scratchpad.ipynb
