[project]
name = "azure-functions-ai-services-agent-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-projects==1.0.0b10",
    "azure-identity>=1.23.0",
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "pip>=25.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]
